Fixed footer overlapping bug
Issue #49

Added uniform margin and removed existing padding to correctly align.

--- a/static/style.css
+++ b/static/style.css
@@ -192,11 +192,9 @@ maincontainer{
 .foot{
     text-align: center;
     background-color: black;
-    color:red;
+    color: red;
     height: 50px;
-    margin: -36px 31px 23px 2px;
-    width: 100%;
-    padding: 20px 20px 20px 0px;
+    margin: 30px;
 }
 .modal {
   display: none; 
